2007-05-12  Bruno Haible  <bruno@clisp.org>

	* Makefile.in (install-dvi, install-html, install-info, install-ps,
	install-pdf): New targets.
	Reported by Noah Slater <nslater@gmail.com>.

2007-04-06  Bruno Haible  <bruno@clisp.org>

	* printf-args.h: Assume HAVE_LONG_DOUBLE to be true.
	* printf-args.c: Likewise.
	* printf-parse.c: Likewise.
	* vasnprintf.c: Likewise.

2007-03-25  Bruno Haible  <bruno@clisp.org>

	* printf-parse.c [!IN_LIBINTL]: Include <stdint.h>, for intmax_t.
	(PRINTF_PARSE): Make the support for size specifier 'j' unconditional.

2007-03-04  Bruno Haible  <bruno@clisp.org>

	* libgnuintl.h.in (libintl_printf): Treat BeOS like NetBSD and Woe32
	systems.
	* printf.c (libintl_printf): Likewise.

2007-02-25  Bruno Haible  <bruno@clisp.org>

	* vasnprintf.c (VASNPRINTF): Fix estimate of size needed for a 'a' or
	'A' conversion.

2007-01-29  Bruno Haible  <bruno@clisp.org>

	* printf-args.h: Use '#if HAVE_*' instead of '#ifdef HAVE_*'.
	* printf-args.c: Likewise.
	* printf-parse.c: Likewise.
	* vasnprintf.c: Likewise.

2007-01-27  Bruno Haible  <bruno@clisp.org>

	* tsearch.h: New file, from gnulib.
	* tsearch.c: New file, from gnulib.
	* dcigettext.c [!HAVE_TSEARCH]: Include tsearch.h and tsearch.c.
	(root, transcmp): Define unconditionally.
	(DCIGETTEXT): Assume tsearch exists.
	* Makefile.in (HEADERS): Add tsearch.h, tsearch.c.

2006-12-21  Bruno Haible  <bruno@clisp.org>

	* localename.c (SUBLANG_BENGALI_INDIA): Change value from 0 to 1.
	(SUBLANG_BENGALI_BANGLADESH): Change value from 1 to 2.
	(SUBLANG_PUNJABI_INDIA): Change value from 0 to 1.
	(SUBLANG_PUNJABI_PAKISTAN): Change value from 1 to 2.
	(SUBLANG_ROMANIAN_ROMANIA): Change value from 0 to 1.
	(SUBLANG_ROMANIAN_MOLDOVA): Change value from 1 to 2.
	(SUBLANG_SINDHI_INDIA): Remove macro.
	(SUBLANG_SINDHI_AFGHANISTAN): New macro.
	(SUBLANG_TAMAZIGHT_ALGERIA_LATIN): Renamed from
	SUBLANG_TAMAZIGHT_LATIN.
	(SUBLANG_TIGRINYA_ETHIOPIA): Change value from 0 to 1.