@@ -1,3 +1,7 @@
+2007-03-08  Bruno Haible  <bruno@clisp.org>
+
+	* lib/vasnprintf.h: Convert tabs in the middle of lines to spaces.
+
 2007-05-03  Bruno Haible  <bruno@clisp.org>
 
 	Add support for both "makeinfo --html" and texi2html.
