@@ -1,3 +1,7 @@
+2007-03-08  Bruno Haible  <bruno@clisp.org>
+
+	* lib/vasnprintf.h: Convert tabs in the middle of lines to spaces.
+
 2007-05-12  Bruno Haible  <bruno@clisp.org>
 
 	* Makefile.in (install-dvi, install-html, install-info, install-ps,
